Fix minor layout issue in about panel text.

--- a/src/tibet/tools/sherpa/TP.sherpa.about/TP.sherpa.about.css
+++ b/src/tibet/tools/sherpa/TP.sherpa.about/TP.sherpa.about.css
@@ -120,10 +120,9 @@ sherpa|about > .content > .product > .trade {
 }
 
 sherpa|about > .content > .tagline {
-
     float: left;
-
-    margin-left: 12px;
+    margin-left: 6px;
+    margin-top: 30px;
 
     font-size: 14px;
     color: #910;
